<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Lang">en_gb</string>
    <string name="time_format">dd/MMM/yyyy HH:mm:ss z</string>
    <string name="success_connect">Connected to the Telegram Server.</string>
    <string name="connect_wait_title">Connecting to the Telegram server…</string>
    <string name="connect_wait_message">Please wait…</string>
    <string name="select_chat">Select Chat</string>
    <string name="battery_low">Battery is low.</string>
    <string name="charger_connect">Charger connected.</string>
    <string name="charger_disconnect">Charger disconnected.</string>
    <string name="bot_token">Bot Token</string>
    <string name="chat_id">Chat ID</string>
    <string name="message_thread_id">Topic ID</string>
    <string name="trusted_phone_number">Trusted phone number</string>
    <string name="get_recent_chat_id">Get recent chat ID</string>
    <string name="test_and_save">Test and save</string>
    <string name="network_error_falls_back_to_sms">Forward SMS to trusted number when network unavailable</string>
    <string name="current_battery_level">"Battery level: "</string>
    <string name="low_battery_status_end">Battery has been charged to a safe level.</string>
    <string name="logcat">View log</string>
    <string name="token_not_configure">Please configure the bot token first.</string>
    <string name="chat_id_or_token_not_config">Please configure the bot token and chat ID first.</string>
    <string name="unable_get_recent">Fail to get recent chat history</string>
    <string name="chat_command">Response to chat command</string>
    <string name="unknown_command">Unknown command, send /help to get the available commands list.</string>
    <string name="current_network_connection_status">"Network status: "</string>
    <string name="battery_monitoring">Monitor battery level change</string>
    <string name="trusted_phone_number_empty">Trusted phone number cannot be empty.</string>
    <string name="service_is_running">Service is running…</string>
    <string name="battery_monitoring_notify">"Battery monitor "</string>
    <string name="chat_command_service_name">"Chat command "</string>
    <string name="success">Success</string>
    <string name="available_command">Available Commands:\n/help - Display help information\n/getinfo - Get system information\n/log - Output the last 10 log records</string>
    <string name="restart_service">Background service has been restarted.</string>
    <string name="status">"Status: "</string>
    <string name="send_failed">Failed</string>
    <string name="airplane_mode">Device is in Airplane mode</string>
    <string name="no_network">No service</string>
    <string name="sendsms_dual" tools:ignore="Typos">/sendsms1 - Send SMS using SIM slot 1\n/sendsms2 - Send SMS using SIM slot 2</string>
    <string name="display_sim_card_alias_in_dual_card_mode">Display SIM card alias</string>
    <string name="failed_to_get_information">Fail to get information.</string>
    <string name="sendsms">/sendsms - Send SMS</string>
    <string name="sending">Sending</string>
    <string name="get_recent_chat_title">Retrieving recent chats…</string>
    <string name="get_recent_chat_message">Please send some messages to the bot.</string>
    <string name="using_doh">Using DNS over HTTPS</string>
    <string name="no_logs">No logs yet.</string>
    <string name="charger_status">Monitor charger status</string>
    <string name="using_verification_code_identification">Verification code automatic extraction (Alpha)</string>
    <string name="user_manual">User manual</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="charging">Charging</string>
    <string name="enter_number">Please enter the receiver\'s number.</string>
    <string name="enter_content">Please enter the message to be sent.</string>
    <string name="unable_get_phone_number">Unable to get phone number.</string>
    <string name="donate">Donate</string>
    <string name="not_charging">Not charging</string>
    <string name="using_privacy_mode">Respond only to commands containing the Bot username</string>
    <string name="scan_title">Scan QR code</string>
    <string name="no_camera_permission">Please allow camera access for QR code scanning.</string>
    <string name="app_list">App list</string>
    <string name="Notification_Listener_title">"Notification Listener "</string>
    <string name="request">"Request: "</string>
    <string name="send_ussd_command">/sendussd - Send USSD request</string>
    <string name="ussd_code_running">USSD code running…</string>
    <string name="privacy_reminder_information">You should be aware that using Telegram-SMS means you trust the way we handle your information. We fully understand that it is a significant responsibility, thus we work hard to protect your information and make sure you can take everything under control. Please refer to our privacy policy to understand your rights and better protect your privacy.</string>
    <string name="privacy_reminder_title">Privacy and terms</string>
    <string name="agree">Agree</string>
    <string name="decline">"I'll decide later"</string>
    <string name="visit_page">Visit the Privacy Terms page</string>
    <string name="failed_resend">"Resending failed SMS"</string>
    <string name="proxy_enable">Enable</string>
    <string name="proxy_host">Host</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_username">Username</string>
    <string name="proxy_password">Password</string>
    <string name="keywords">Keywords</string>
    <string name="spam_sms_keyword_title">SMS blocklist</string>
    <string name="spam_keyword_edit_title">Edit Keyword</string>
    <string name="spam_keyword_add_title">Add Keyword</string>
    <string name="proxy_title">Proxy</string>
    <string name="proxy_dialog_title">Socks5 proxy setup</string>
    <string name="set_notification_listener">Notification listener</string>
    <string name="time">"Time: "</string>
    <string name="doh_over_socks5">DNS over HTTPS requests over Socks5</string>
    <string name="get_spam_sms">/getspamsms - Get filtered spam messages</string>
    <string name="spam_count_title">"Filtered spam: "</string>
    <string name="no_spam_history">No spam history</string>
    <string name="transfer_configuration">Transfer Configuration</string>
    <string name="ok_button">OK</string>
    <string name="about_title">About</string>
    <string name="about_content">"Developer: qwe7002 ous50\nEnglish translation: @tangbao @jixunmoe\nCurrent version: "</string>
    <string name="send_ussd_dual_command" tools:ignore="Typos">"/sendussd1 - Send USSD request using SIM slot 1\n/sendussd2 - Send USSD request using SIM slot 2"</string>
    <string name="qrcode_notice">Keep this QR code safe!\nPlease don\'t share it with others.</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="send_button">Send</string>
    <string name="check_update">Check for updates</string>
    <string name="update_dialog_title">New Version Found</string>
    <string name="update_dialog_body">%s is available for update.</string>
    <string name="update_dialog_ok">Update now</string>
    <string name="update_dialog_no">Talk to you later</string>
    <string name="unable_to_obtain_information">Unable to get message</string>
    <string name="template_title">Template</string>
    <string name="reset_button">Reset</string>
    <string name="send_sms_title">Send SMS</string>
    <string name="receive_call_title">Receive Call</string>
    <string name="missed_call_title">Missed Call</string>
    <string name="receive_sms_title">Receive SMS</string>
    <string name="receive_mms_title">Receive MMS</string>
    <string name="receive_notification_title">Receive Notification</string>
    <string name="send_ussd_title">Send USSD</string>
    <string name="battery_title">Battery Monitoring</string>
    <string name="edit_cc_service">Edit Cc Service</string>
    <string name="add_cc_service">Add Cc Service</string>
    <string name="copy_notification_menu">Carbon copy</string>
    <string name="verification_code">" (Verification Code)"</string>
    <string name="error_title">Error</string>
    <string name="an_error_occurred_while_decrypting_the_configuration">An error occurred while decrypting the configuration</string>
    <string name="an_error_occurred_while_getting_the_configuration">"An error occurred while getting the configuration: "</string>
    <string name="error_id_cannot_be_empty">ID cannot be empty</string>
    <string name="error_password_cannot_be_empty">Password cannot be empty</string>
    <string name="error_id_must_be_9_characters">ID must be 9 characters</string>
    <string name="configuration_sent_successfully">"Configuration sent successfully.\nID: "</string>
    <string name="please_enter_your_info">Please enter your configuration information</string>
    <string name="getting_configuration">Getting configuration</string>
    <string name="sending_configuration">Sending configuration</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="error_password_must_be_6_characters">Password length needs to be greater than 6 characters</string>
    <string name="invalid_json_structure">Invalid JSON structure</string>
    <string name="no_entries_available">No entries available</string>
    <string name="cc_service_enabled">" (Enabled)"</string>
    <string name="cc_service_disabled">" (Disabled)"</string>
    <string name="this_is_a_test_message">This is a test message.</string>
    <string name="no_service_available">No service available.</string>
    <string name="cc_service_config_title">Please select the service that needs to be copied</string>
    <string name="call_notify">Notify when call received</string>
    <string name="receiving_call_title">Receiving Call</string>
    <string name="Incoming_number">Incoming Number:</string>
    <string name="app_name_title">App Name:</string>
    <string name="title">Title:</string>
    <string name="system_message_head">[System Information]</string>
    <string name="browser_not_found">Browser not found.</string>
    <string name="set_api_title">API Address</string>
    <string name="hide_phone_number">Hide Phone Numbers</string>
    <!-- SMS Management -->
    <string name="listsms_command">/listsms - List SMS messages</string>
    <string name="listsms_inbox_command">/listsms inbox - List inbox messages\n/listsms sent - List sent messages</string>
    <string name="sms_list_header">📱 SMS List (%1$s)</string>
    <string name="sms_list_empty">No SMS messages found.</string>
    <string name="sms_detail_header">📩 SMS Details</string>
    <string name="sms_from">From:</string>
    <string name="sms_to">To:</string>
    <string name="sms_date">Date:</string>
    <string name="sms_content">Content:</string>
    <string name="sms_type_inbox">Inbox</string>
    <string name="sms_type_sent">Sent</string>
    <string name="sms_type_all">All</string>
    <string name="sms_not_found">SMS not found.</string>
    <string name="sms_deleted">SMS deleted successfully.</string>
    <string name="sms_delete_failed">Failed to delete SMS.</string>
    <string name="sms_delete_confirm">Are you sure you want to delete this SMS?</string>
    <string name="not_default_sms_app">This feature requires the app to be set as the default SMS app.</string>
    <string name="prev_page">Previous</string>
    <string name="next_page">Next</string>
</resources>
