<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/proxy_enable_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:text="@string/proxy_enable"
        tools:ignore="ExtraText,RtlSymmetry" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proxy_host_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/proxy_host_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proxy_host"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proxy_port_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/proxy_port_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proxy_port"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/proxy_username_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proxy_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/proxy_password_editview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proxy_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
